--- a/includes/_reports-regional.pug
+++ b/includes/_reports-regional.pug
@@ -21,19 +21,22 @@ include ../_mixins.pug
   .grid-container.medium-pb1
     .grid-x.grid-margin-x.grid-margin-y.small-up-1.medium-up-3
       +reports-regional({
-        title: 'Find out why digital technologies and an adaptable workforce will power the work ahead in the U.S. and Canada.',
-        linkText: 'READ REPORT',    
-        image: 'images/twa-report-americas.jpg'
+        title: "Find out why digital technologies and an adaptable workforce will power the work ahead in the U.S. and Canada.",
+        linkText: "READ REPORT",    
+        image: "images/twa-report-americas.jpg",
+        url: "https://www.cognizant.com/whitepapers/the-work-ahead-modernizing-north-america-2-0-codex6157.pdf"
       })(data-aos="fade-left")
       +reports-regional({
-        title: 'Read how Europe’s business and political leaders are embracing new meanings of the future of work and technology’s defining role.',
-        linkText: 'READ REPORT',
-        image: 'images/twa-report-europe.jpg'
+        title: "Read how Europe’s business and political leaders are embracing new meanings of the future of work and technology’s defining role.",
+        linkText: "READ REPORT",
+        image: "images/twa-report-europe.jpg",
+        url: "https://www.cognizant.com/whitepapers/the-work-ahead-europes-digital-ambition-scales-codex6155.pdf"
       })(data-aos="fade")
       +reports-regional({
-        title: 'Learn how Asia Pacific and the Middle East are balancing machine-driven and human-centric work.',
-        linkText: 'READ REPORT',
-        image: 'images/twa-report-asia.jpg'
+        title: "Learn how Asia Pacific and the Middle East are balancing machine-driven and human-centric work.",
+        linkText: "READ REPORT",
+        image: "images/twa-report-asia.jpg",
+        url: "https://www.cognizant.com/whitepapers/the-work-ahead-asia-drives-digitals-future-codex6156.pdf"
       })(data-aos="fade-right")
 
   .grid-container
