--- a/includes/_reports-regional.pug
+++ b/includes/_reports-regional.pug
@@ -4,8 +4,8 @@ include ../_mixins.pug
   .grid-container
     .grid-x.grid-padding-x.align-middle
       .cell.medium-5
-        p.mb-half.text-spacing-1 OVERVIEW
-        h3 Regional Reports
+        p.mb-half.text-spacing-1 CHANGE_ME
+        h3 The Work Ahead by region 
       .cell.auto
         // ======================================================================
         // ██████   ██████  ██████  ██████  ███████ ██████
@@ -27,7 +27,7 @@ include ../_mixins.pug
         url: "https://www.cognizant.com/whitepapers/the-work-ahead-modernizing-north-america-2-0-codex6157.pdf"
       })(data-aos="fade-left")
       +reports-regional({
-        title: "Read how Europe’s business and political leaders are embracing new meanings of the future of work and technology’s defining role.",
+        title: "Read how European leaders are embracing new meanings of the future of work and technology’s defining role.",
         linkText: "READ REPORT",
         image: "images/twa-report-europe.jpg",
         url: "https://www.cognizant.com/whitepapers/the-work-ahead-europes-digital-ambition-scales-codex6155.pdf"
