--- a/includes/_text-video.pug
+++ b/includes/_text-video.pug
@@ -1,7 +1,7 @@
 .grid-container.text-center.py4.medium-py6
   .grid-x 
     .cell
-      h3.mb2.medium-mb3.text-light.text-gray Rich meaning lives in every process that touches customers, employees and suppliers. When you partner AI effectively with new workflows that match smart people with smart machines, you can ready your business for success in the work ahead. 
+      h3.mb2.medium-mb3.text-light.text-gray Join in the conversation of what’s next for global organizations. Explore with us where business is headed, after a global pandemic has rewritten the future of work. It’s a time of reset, to forge new ways to connect with customers, employees and supply chains. There are many challenges still ahead, and The Work Ahead is here to help you get there.
 
       .responsive-embed.widescreen
         iframe.lazyload(width="420" height="315" data-src="https://www.youtube.com/embed/rHxrFg0Reus" frameborder="0" allowfullscreen)
