--- a/includes/_report.pug
+++ b/includes/_report.pug
@@ -23,10 +23,10 @@ include ../_mixins.pug
   // ======================================================================  
   .grid-x.grid-padding-x.align-middle.report
     .cell.medium-6.small-12.relative(data-aos="fade-left")
-      p.mb-half.text-gray.text-spacing-1 GLOBAL REPORT
-      h2 Mastering the Digital Economy
+      p.mb-half.text-gray.text-spacing-1 CHANGE_ME
+      h2 CHANGE_ME
       p The Work Ahead reveals that while digital is still a work in progress, digital competency is the primary competency that will move businesses into the future.
-      a.button.arrow.expanded.medium-mt2.link-coverAll(href="https://www.cognizant.com/whitepapers/the-work-ahead-digital-first-to-last-codex6154.pdf" target="_blank" rel="noopener") READ THE REPORT
+      a.button.arrow.expanded.medium-mt2.link-coverAll(href="https://www.cognizant.com/whitepapers/the-work-ahead-digital-first-to-last-codex6154.pdf" target="_blank" rel="noopener") READ NOW
       +social-media({
         type: 'logo-facebook',
         link: 'https://www.facebook.com/cognizant'
