--- a/includes/_team.pug
+++ b/includes/_team.pug
@@ -5,37 +5,37 @@ include ../_mixins.pug
   .grid-x.grid-padding-x.grid-margin-y.align-center
     .cell.medium-10.text-center
       p.mb-half.text-gray.text-spacing-1 GET IN TOUCH
-      h3 Our Leadership Team
+      h3 Authors
       p Follow the Center for the Future of Work for up to date research, insight and advice to help leaders make sense of the latest technologies, business models and generation of workers.
     .cell(data-aos="fade-up")
       .grid-x.grid-padding-x.grid-margin-y.text-center.align-center.medium-up-4
         +team-tile(
-        {
-          image: "https://www.cognizant.com/futureofwork/images/article/author2/medium/9170d636a3bcd511b00a7427cf666a5f.png",
-          name: 'Manish Bahl',
-          description: 'Senior Director, Center for the Future of Work',
-          linkedin: 'https://www.linkedin.com/in/manishbahl',
-          twitter: 'https://twitter.com/mbahl'
-        },
-        {
-          image: "https://www.cognizant.com/futureofwork/images/article/author2/medium/9d068cd8069010030f89b94630b43e5e.png",
-          name: 'Robert Brown',
-          description: 'AVP, Center for the Future of Work ',
-          linkedin: 'https://www.linkedin.com/in/robthbrown',
-          twitter: 'https://twitter.com/robthbrown'
-        },
-        {
-          image: "https://www.cognizant.com/futureofwork/images/article/author2/medium/7576aafcfa7ada3848a8fe529a81759b.png",
-          name: 'Euan Davis',
-          description: 'AVP, Center for the Future of Work',
-          linkedin: 'https://www.linkedin.com/in/euandavis',
-          twitter: 'https://twitter.com/euandavis'
-        },
-        {
-          image: "https://www.cognizant.com/futureofwork/images/article/author2/medium/17d4da016e068d3d3e83ce41047b1b86.png",
-          name: 'Ben Pring',
-          description: 'VP, Director, Center for the Future of Work ',
-          linkedin: 'https://www.linkedin.com/in/benpring',
-          twitter: 'https://twitter.com/benjaminpring'
-        } 
+          {
+            image: "https://www.cognizant.com/futureofwork/images/article/author2/medium/17d4da016e068d3d3e83ce41047b1b86.png",
+            name: 'Ben Pring',
+            description: 'VP, Director, Center for the Future of Work ',
+            linkedin: 'https://www.linkedin.com/in/benpring',
+            twitter: 'https://twitter.com/benjaminpring'
+          },
+          {
+            image: "https://www.cognizant.com/futureofwork/images/article/author2/medium/9d068cd8069010030f89b94630b43e5e.png",
+            name: 'Robert Brown',
+            description: 'AVP, Center for the Future of Work ',
+            linkedin: 'https://www.linkedin.com/in/robthbrown',
+            twitter: 'https://twitter.com/robthbrown'
+          },
+          {
+            image: "https://www.cognizant.com/futureofwork/images/article/author2/medium/7576aafcfa7ada3848a8fe529a81759b.png",
+            name: 'Euan Davis',
+            description: 'AVP, Center for the Future of Work',
+            linkedin: 'https://www.linkedin.com/in/euandavis',
+            twitter: 'https://twitter.com/euandavis'
+          },
+          {
+            image: "https://www.cognizant.com/futureofwork/images/article/author2/medium/9170d636a3bcd511b00a7427cf666a5f.png",
+            name: 'Manish Bahl',
+            description: 'Senior Director, Center for the Future of Work',
+            linkedin: 'https://www.linkedin.com/in/manishbahl',
+            twitter: 'https://twitter.com/mbahl'
+          }
         )
